Bug 31309 - [UI]: Tasks pane items visibility can not be restored
Summary: [UI]: Tasks pane items visibility can not be restored
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Rob Snelders
URL:
Whiteboard: target:4.1.0 target:4.0.0.0.beta0
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-01 18:00 UTC by Kohei Yoshida
Modified: 2012-12-13 21:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
See Comment 2 (29.38 KB, application/pdf)
2011-02-07 00:45 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2010-11-01 18:00:49 UTC
This is also reported in OOo's issue tracker:

http://www.openoffice.org/issues/show_bug.cgi?id=115307

I'll copy and paste the description:
---
How to reproduce:

1.Open a new/existing document in Impress
2.Click "View" - select "Task Pane"
   -- The Tasks pane has appeared on the right side
3.Click "View" on the Tasks pane
   -- Five item names have showed on the Tasks pane
4.Unselect 5 items on the Task pane
5.Click "View" - unselect "Task Pane"
   -- The Tasks pane has disappeared
6.Click "View" - select "Task Pane", again
   -- The Tasks pane has appeared on the right side
7.Click "View" on the Tasks pane
   -- All item names have unshowed on the Tasks pane

In previous versions:
After above repro step7, five item names have showed on the Tasks pane without
checked mark.
Comment 1 Kohei Yoshida 2010-11-01 18:01:19 UTC
This one is for Thorsten.
Comment 2 Rainer Bielefeld Retired 2011-02-07 00:44:19 UTC
[Reproducible] with "LibreOffice 3.3.0 RC4 - WIN7  Home Premium (64bit) English UI  [OOO330m19 (build 6 / tag 3.3.0.4)]".

After Step 7 I get an empty selection for Task Pane items, no idea how to get items back.

Reassign due to Comment 1
Comment 3 Rainer Bielefeld Retired 2011-02-07 00:45:34 UTC
Created attachment 43020 [details]
See Comment 2
Comment 4 Rainer Bielefeld Retired 2011-02-07 00:48:36 UTC
Still the same problem with "Ooo-Dev 3.4.0 multilingual version English UI WIN XP: [OOo300m98 (Build 9568)]"!
Comment 5 Rob Snelders 2012-12-03 21:54:04 UTC
created a patch that makes all items visible before closing the panel. Then all items are visible again at re-activating the taskpane.

The problem is that there is only 1 array that remembers all items of the taskpane. That array is deleted at de-activating the tastpane. So nothing remembers all the items of the taskpane. So not a complete fix but improving the situation.

patch: https://gerrit.libreoffice.org/#/c/1231/
Comment 6 Kohei Yoshida 2012-12-13 06:03:00 UTC
Let's not close the bug before the fix is committed.  It's still pending on review in gerrit.
Comment 7 Not Assigned 2012-12-13 06:29:06 UTC
Rob Snelders committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8a4db529db50dca5df7b56f770fce2da7725fdda

fdo#31309 Taskpane items visibility can't be restored



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Kohei Yoshida 2012-12-13 06:30:19 UTC
Ok.  Now this is really fixed.

Reassigning to Rob to correctly keep track of who fixed it.
Comment 9 Not Assigned 2012-12-13 06:35:03 UTC
Rob Snelders committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=417e10b3714c3106fb7a602d91c174aefff32763&g=libreoffice-4-0

fdo#31309 Taskpane items visibility can't be restored


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Rob Snelders 2012-12-13 21:18:09 UTC
It worked in OO.o 3.2.1