fdo#31309 Taskpane items visibility can't be restored

Change-Id: I9959b8e0a21252638a4f39f88bf5049ea905f4bb
Reviewed-on: https://gerrit.libreoffice.org/1231
Reviewed-by: Lennard Wasserthal <Wasserthal@nefkom.net>
Reviewed-by: Kohei Yoshida <kohei.yoshida@gmail.com>
Tested-by: Kohei Yoshida <kohei.yoshida@gmail.com>